[gd_scene load_steps=19 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/godot_tinyfont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/box_key.png" type="Texture" id=3]
[ext_resource path="res://assets/pixel.png" type="Texture" id=4]
[ext_resource path="res://scenes/menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/text.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource/name = "fadein"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]

resource/name = "fadeout"
length = 2.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "fadein"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "fadeout"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]

resource/name = "hide"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]

resource/name = "show"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 65, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.476563, 0.00930786, 0.00930786, 1 ), Color( 0.0117647, 0.47451, 0.00930786, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../../..")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 1.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hide_progress_update"
} ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=9]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=10]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fading_poly:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fading_poly:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]

length = 0.4
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("fading_poly:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fading_poly:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SampleLibrary" id=12]


[node name="main" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="act" type="Node2D" parent="."]

process/pause_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="hud_layer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="hud" type="Node2D" parent="hud_layer"]

process/pause_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="score" type="Node2D" parent="hud_layer/hud"]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="score_label" type="Label" parent="hud_layer/hud/score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 0.0
margin/right = 21.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Score"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="score" type="Label" parent="hud_layer/hud/score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 44.0
margin/bottom = 9.0
custom_fonts/font = ExtResource( 2 )
text = "00000"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="score_animator" type="AnimationPlayer" parent="hud_layer/hud/score"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = SubResource( 1 )
anims/fadeout = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fadeout"

[node name="key" type="Node2D" parent="hud_layer/hud"]

editor/display_folded = true
transform/pos = Vector2( 313, 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="hud_layer/hud/key"]

transform/rot = 90.0
texture = ExtResource( 3 )
vframes = 3
hframes = 10
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="key_animator" type="AnimationPlayer" parent="hud_layer/hud/key"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = SubResource( 3 )
anims/fadeout = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fadeout"

[node name="progress_indicator" type="Node2D" parent="hud_layer/hud"]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="hud_layer/hud/progress_indicator"]

transform/pos = Vector2( 254, 173 )
transform/scale = Vector2( 65, 7 )
texture = ExtResource( 4 )
centered = false
modulate = Color( 0.0117647, 0.47451, 0.00930786, 1 )

[node name="Label" type="Label" parent="hud_layer/hud/progress_indicator"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 208.0
margin/top = 168.0
margin/right = 319.0
margin/bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = "progress updated"
align = 2
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="hud_layer/hud/progress_indicator"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 5 )
anims/show = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "hide"

[node name="pause_game" type="Node2D" parent="hud_layer"]

process/pause_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="pause_poly" type="Polygon2D" parent="hud_layer/pause_game"]

visibility/opacity = 0.5
polygon = Vector2Array( -10, -10, -10, 190, 330, 190, 330, -10 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_lock_": true
}

[node name="pause_animator" type="AnimationPlayer" parent="hud_layer/pause_game"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = SubResource( 7 )
anims/fadeout = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fadeout"

[node name="Label" type="Label" parent="hud_layer/pause_game"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "game paused"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="hud_layer/pause_game/Label"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cycle = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "cycle"

[node name="menu" parent="hud_layer/pause_game" instance=ExtResource( 5 )]

[node name="continue" type="Sprite" parent="hud_layer/pause_game/menu"]

transform/pos = Vector2( 160, 80 )
texture = ExtResource( 6 )
region = true
region_rect = Rect2( 1, 8, 58, 8 )

[node name="quit" type="Sprite" parent="hud_layer/pause_game/menu"]

transform/pos = Vector2( 160, 100 )
texture = ExtResource( 6 )
region = true
region_rect = Rect2( 1, 38, 27, 9 )

[node name="fading" type="Node2D" parent="hud_layer"]

editor/display_folded = true
z/z = 10
__meta__ = {
"_edit_lock_": true
}

[node name="fading_poly" type="Polygon2D" parent="hud_layer/fading"]

visibility/visible = false
polygon = Vector2Array( -20, -20, 340, -20, 340, 200, -20, 200 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_lock_": true
}

[node name="fading_animator" type="AnimationPlayer" parent="hud_layer/fading"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = SubResource( 10 )
anims/fadeout = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="loadtimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="music" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="background" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="music_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="background_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 10
config/samples = SubResource( 12 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="timeout" from="loadtimer" to="." method="_on_loadtimer_timeout"]

[connection signal="timeout" from="music_timer" to="." method="_on_music_timer_timeout"]

[connection signal="timeout" from="background_timer" to="." method="_on_background_timer_timeout"]


